# stm32-cmake-template

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  debug.jdebug  link.ld  template.jdebug  toolchain.cmake
cmake/: toolchain.cmake  utils.cmake
hal/: .gitignore  CMakeLists.txt  STM32L053C8Tx_FLASH.ld  hal.ioc
hal/Inc/: FreeRTOSConfig.h  main.h  stm32f1xx_hal_conf.h  stm32l0xx_hal_conf.h  stm32l0xx_it.h
hal/Src/: freertos.c  gpio.c  main.c  stm32l0xx_hal_msp.c  stm32l0xx_hal_timebase_tim.c  stm32l0xx_it.c
libs/contiki/: CMakeLists.txt
libs/contiki/conf/: contiki-conf.h
libs/rtt/: CMakeLists.txt
src/: clock.c  main.c  main_app.c
